envoy/envoy.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-external-service
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 8080
    protocol: TCP
  selector:
    app: envoy
