envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["hopin.website"]
              routes:
              - match: { prefix: "/" }
                route: { host_rewrite_literal: frontend, cluster: web-frontend-cluster }
            - name: stage_service
              domains: ["stage.hopin.website"]  # corrected domain format
              routes:
              - match: { prefix: "/" }
                route: { cluster: stage-cluster }
            - name: vpn_service
              domains: ["vpn.hopin.website"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: vpn-vm } 
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
             "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain: { filename: "/etc/envoy/certificate.pem" }
              private_key: { filename: "/etc/envoy/private_key.pem" }
  clusters:
  - name: web-frontend-cluster
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: web-frontend-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 10.128.0.54, port_value: 80 }
  - name: stage-cluster  
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: stage-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 10.128.0.58, port_value: 80 }
  - name: vpn-vm
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: vpn-vm
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 10.128.0.59, port_value: 443 }
